--- a/style/theme/black/style.css
+++ b/style/theme/black/style.css
@@ -1,4 +1,4 @@
-/* ----------------------------------------------------------------------------
+﻿/* ----------------------------------------------------------------------------
  * Fonts
  */
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,700");
@@ -199,7 +199,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 @media (max-width: 1180px) /* Small desktop */ {
 	.language ul li a { margin: 6px 3px 5px; padding: 3px 6px; }
 	.language .nav li:first-child a { margin-left: 20px; }
-	.content pre > code { background: #F5F5F5; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; display: block; padding: 10px; -webkit-border-radius: 2px; border-radius: 2px; overflow: auto; }
+	.content pre > code { background: #15191D; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; display: block; padding: 10px; -webkit-border-radius: 2px; border-radius: 2px; overflow: auto; }
 	.content pre > code { -webkit-overflow-scrolling: touch; }
 		.content pre > code::-webkit-scrollbar { width: 15px; height: 15px; }
 		.content pre > code::-webkit-scrollbar-thumb { background: #ddd; -webkit-border-radius: 8px; border-radius: 8px; border: solid 4px #15191D; }
@@ -217,8 +217,8 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 
 @media (min-width: 1180px) /* Big desktop */ {
 	.language .nav li:first-child a { margin-left: 20px; }
-	body:not(.no-literate) .content-root { background-color: #F5F5F5; -webkit-box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); }
-	.language { left: 780px; }
+	body:not(.no-literate) .content-root { background-color: #15191D; -webkit-box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); }
+	.language { left: 778px; }
 }
 
 @media (min-width: 1180px) /* Big desktop */ {
@@ -265,7 +265,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	body:not(.no-literate):not(.big-h3) .content > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
 }
 
-.header { background: #3a3a3a; border-bottom: solid 3px #00b0f0; box-shadow: 0 1px 5px #969696; padding: 6px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; height: 50px; }
+.header { background: #fff; text-shadow: 0 1px 0 rgba(255,255,255,0.5); box-shadow: 0 1px 5px #969696; padding: 4px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; height: 52px; }
 	.header:before,
 	.header:after { content: ""; display: table; }
 	.header:after { clear: both; }
@@ -277,9 +277,9 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		.header h1 a,
 		.header h1 a:visited { color: #9090aa; }
 			.header h1 a:hover { color: #505050; }
-	.header li a { color: #999; display: block; text-transform: lowercase; font-size: 13px; }
-		.header li a:hover { color: #eee; border-bottom: solid 1px #00b0f0; }
-	.header li.active a { color: #fff; border-bottom: solid 1px #00b0f0; }
+	.header li a { font-size: 0.85em; font-weight: 700; color: #999; display: block; text-transform: uppercase; letter-spacing: 1px; }
+		.header li a:hover { color: gray; border-bottom: solid 1px #00b0f0; }
+	.header li.active a { color: gray; border-bottom: solid 1px #00b0f0; }
 
 @media (min-width: 480px) /* Tablet & Desktop */ {
 	.header h1 { float: left; }
@@ -287,8 +287,9 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	.header li { display: block; float: left; }
 	.header ul { margin-left: -15px; }
 	.header h1 + ul { border-left: solid 1px #dfe2e7; margin-left: 15px; }
+	/*.header li { border-left: solid 1px rgba(255,255,255,0.5); border-right: solid 1px #dfe2e7; }*/
 	.header li:last-child { border-right: 0; }
-	.header li a { padding: 0 3px; margin: 0 20px; line-height: 18px; height: 18px; }
+	.header li a { padding: 0 3px; margin: 0 20px; line-height: 16px; }
 }
 
 @media (max-width: 480px) /* Mobile */ {
@@ -298,8 +299,8 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	.language ul li a { margin: 5px 2px 4px; padding: 2px 5px; }
 }
 
-.menubar { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; background-color: #dfdfdf; }
-	.menubar .section { padding: 30px 0px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.menubar { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; }
+	.menubar .section { padding: 30px 30px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 		.menubar .section + .section { border-top: solid 1px #dfe2e7; }
 		.menubar .section.no-line { border-top: 0; padding-top: 0; }
 a.big.button { display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; width: 100%; padding: 10px 20px; text-align: center; font-weight: bold; font-size: 1.1em; background: transparent; border: solid 3px #2badad; -webkit-border-radius: 30px; border-radius: 30px; }
@@ -319,7 +320,7 @@ a.big.button { display: block; -webkit-box-sizing: border-box; -moz-box-sizing: 
 
 @media (min-width: 768px) /* Desktop */ {
 	.content-root { padding-left: 230px; }
-	.menubar { position: absolute; left: 0; top: 0; bottom: 0; width: 230px; }
+	.menubar { position: absolute; left: 0; top: 0; bottom: 0; width: 230px; border-right: solid 1px #dfe2e7; }
 		.menubar.fixed { position: fixed; overflow-y: auto; }
 		.menubar.fixed { -webkit-overflow-scrolling: touch; }
 			.menubar.fixed::-webkit-scrollbar { width: 15px; height: 15px; }
@@ -327,23 +328,23 @@ a.big.button { display: block; -webkit-box-sizing: border-box; -moz-box-sizing: 
 			.menubar.fixed:hover::-webkit-scrollbar-thumb { background: #999; -webkit-box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); }
 }
 
-.menubar { font-size: 0.95em; overflow-x: hidden; }
+.menubar { font-size: 0.95em; }
 .menu ul.level-1 > li + li { margin-top: 20px; }
-.menu a { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; display: block; border-left: solid 3px transparent; padding-top: 1px; padding-bottom: 1px; margin-right: -30px; }
+.menu a { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; display: block; padding-top: 1px; padding-bottom: 1px; margin-right: -30px; }
 	.menu a,
-	.menu a:visited { padding-left: 30px; padding-top: 4px; padding-bottom: 4px; color: #363636; }
-		.menu a:hover { }
+	.menu a:visited { }
+		.menu a:hover { text-decoration: underline; }
 		.menu a.level-1 { text-transform: uppercase; font-size: 1.0em; font-weight: bold; }
 			.menu a.level-1,
-			.menu a.level-1:visited { color: #363636; }
+			.menu a.level-1:visited { color: #9090aa; }
 				.menu a.level-1:hover { color: #565666; }
 		.menu a.level-2 { font-weight: normal; font-size: 0.95em; }
-		.menu a.level-3 { font-weight: normal; font-size: 0.95em; padding-left: 40px; }
-		.menu a.active { }
+		.menu a.level-3 { font-weight: normal; font-size: 0.95em; padding-left: 10px; }
+		.menu a.active { font-weight: bold !important; }
 			.menu a.active,
 			.menu a.active:visited,
-			.menu a.active:hover { color: #2a2a2a !important; background-color: #fff; border-left: solid 3px #00B0F0; }
-				.menu a.active:after { content: ''; display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: absolute; top: 10px; right: 30px; width: 9px; height: 3px; -webkit-border-radius: 2px; border-radius: 2px; }
+			.menu a.active:hover { color: #505050 !important; }
+				.menu a.active:after { content: ''; display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: absolute; top: 10px; right: 30px; width: 9px; height: 3px; -webkit-border-radius: 2px; border-radius: 2px; background: #2badad; }
 code .string { color: #BBB156; }
 /*code .number*/
 code .init { color: #383; }
