--- a/style/theme/white/style.css
+++ b/style/theme/white/style.css
@@ -163,7 +163,7 @@ a { color: #0093c8; text-decoration: none; }
 .content h4,
 .content h5,
 .content .small-heading,
-body:not(.big-h3) .content h3 { border-bottom: solid 1px rgba(102, 102, 102, 0.25); color: #9E9E9E; padding-top: 30px; padding-bottom: 10px; }
+body:not(.big-h3) .content h3 { border-bottom: solid 1px rgba(102, 102, 102, 0.25); color: #888888; padding-top: 30px; padding-bottom: 10px; }
 body:not(.big-h3) .content h3 { font-size: 0.9em; }
 .content h1:first-child { padding-top: 0; }
 	.content h1:first-child,
