changed flatdoc parser for code wrapping down

--- a/style/theme/white/style.css
+++ b/style/theme/white/style.css
@@ -224,45 +224,44 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 @media (min-width: 1180px) /* Big desktop */ {
 	.language ul li a { margin: 9px 5px 8px; padding: 3px 8px; }
 	body:not(.no-literate) .content { padding-left: 0; padding-right: 0; width: 930px; max-width: none; }
-		body:not(.no-literate) .content > p,
-		body:not(.no-literate) .content > ul,
-		body:not(.no-literate) .content > ol,
-		body:not(.no-literate) .content > h1,
-		body:not(.no-literate) .content > h2,
-		body:not(.no-literate) .content > h3,
-		body:not(.no-literate) .content > h4,
-		body:not(.no-literate) .content > h5,
-		body:not(.no-literate) .content > h6,
-		body:not(.no-literate) .content > pre,
-		body:not(.no-literate) .content > blockquote { width: 550px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 40px; padding-left: 40px; }
-		body:not(.no-literate) .content > h1 { clear: both; width: 120%; padding-right: 0px; }
-		body:not(.no-literate) .content > h2,
-		body:not(.no-literate) .content > h3 { clear: both; width: 116%; }
-		body:not(.no-literate) .content > pre,
-		body:not(.no-literate) .content > blockquote { width: 380px; padding: 4px 20px; float: right; clear: right; }
-			body:not(.no-literate) .content > pre + p,
-			body:not(.no-literate) .content > blockquote + p,
-			body:not(.no-literate) .content > pre + ul,
-			body:not(.no-literate) .content > blockquote + ul,
-			body:not(.no-literate) .content > pre + ol,
-			body:not(.no-literate) .content > blockquote + ol,
-			body:not(.no-literate) .content > pre + h4,
-			body:not(.no-literate) .content > blockquote + h4,
-			body:not(.no-literate) .content > pre + h5,
-			body:not(.no-literate) .content > blockquote + h5,
-			body:not(.no-literate) .content > pre + h6,
-			body:not(.no-literate) .content > blockquote + h6 { clear: both; }
-		body:not(.no-literate) .content > p,
-		body:not(.no-literate) .content > ul,
-		body:not(.no-literate) .content > ol,
-		body:not(.no-literate) .content > h4,
-		body:not(.no-literate) .content > h5,
-		body:not(.no-literate) .content > h6 { float: left; clear: left; }
-		body:not(.no-literate) .content > h4,
-		body:not(.no-literate) .content > h5,
-		body:not(.no-literate) .content > .small-heading,
-		body:not(.big-h3) body:not(.no-literate) .content > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
-	body:not(.no-literate):not(.big-h3) .content > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
+		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
+		body:not(.no-literate) .content > ul, body:not(.no-literate) .content > div > ul,
+		body:not(.no-literate) .content > ol, body:not(.no-literate) .content > div > ol,
+		body:not(.no-literate) .content > h1, body:not(.no-literate) .content > div > h1,
+		body:not(.no-literate) .content > h2, body:not(.no-literate) .content > div > h2,
+		body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3,
+		body:not(.no-literate) .content > h4, body:not(.no-literate) .content > div > h4,
+		body:not(.no-literate) .content > h5, body:not(.no-literate) .content > div > h5,
+		body:not(.no-literate) .content > h6, body:not(.no-literate) .content > div > h6,
+		body:not(.no-literate) .content > pre, body:not(.no-literate) .content > div > pre,
+		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 550px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 40px; padding-left: 40px; }
+		body:not(.no-literate) .content > h1, body:not(.no-literate) .content > div > h1 { clear: both; width: 120%; padding-right: 0px; }
+		body:not(.no-literate) .content > h2, body:not(.no-literate) .content > div > h2,
+		body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3 { clear: both; width: 116%; }
+		body:not(.no-literate) .content > pre, body:not(.no-literate) .content > div > pre,
+		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 380px; padding: 4px 20px; float: right; clear: right; }
+			body:not(.no-literate) .content > pre + p, body:not(.no-literate) .content div > pre + p,
+			body:not(.no-literate) .content > blockquote + p, body:not(.no-literate) .content > div > blockquote + p,
+			body:not(.no-literate) .content > pre + ul, body:not(.no-literate) .content div > pre + p,
+			body:not(.no-literate) .content > blockquote + ul, body:not(.no-literate) .content div > blockquote + ul,
+			body:not(.no-literate) .content > pre + ol, body:not(.no-literate) .content div > pre + p,
+			body:not(.no-literate) .content > blockquote + ol, body:not(.no-literate) .content div > blockquote + ol,
+			body:not(.no-literate) .content > pre + h4, body:not(.no-literate) .content div > pre + p,
+			body:not(.no-literate) .content > blockquote + h4, body:not(.no-literate) .content div > blockquote + h4,
+			body:not(.no-literate) .content > pre + h5, body:not(.no-literate) .content div > pre + p,
+			body:not(.no-literate) .content > blockquote + h5, body:not(.no-literate) .content div > blockquote + h5,
+			body:not(.no-literate) .content > pre + h6, body:not(.no-literate) .content div > pre + p,
+			body:not(.no-literate) .content > blockquote + h6, body:not(.no-literate) .content div > blockquote + h6 { clear: both; }
+		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
+		body:not(.no-literate) .content > ul, body:not(.no-literate) .content > div > ul,
+		body:not(.no-literate) .content > ol, body:not(.no-literate) .content > div > ol,
+		body:not(.no-literate) .content > h4, body:not(.no-literate) .content > div > h4,
+		body:not(.no-literate) .content > h5, body:not(.no-literate) .content > div > h5,
+		body:not(.no-literate) .content > h6, body:not(.no-literate) .content > div > h6, { float: left; clear: left; }
+		body:not(.no-literate) .content > h4, body:not(.no-literate) .content > div > h4,
+		body:not(.no-literate) .content > h5, body:not(.no-literate) .content > div > h5,
+		body:not(.no-literate) .content > .small-heading, body:not(.no-literate) .content > div > .small-heading,
+		body:not(.big-h3) body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
 }
 
 .header { background: #3a3a3a; border-bottom: solid 3px #00b0f0; box-shadow: 0 1px 5px #969696; padding: 6px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; height: 50px; }
