parser changed for rest to javascript

--- a/style/theme/white/custom.css
+++ b/style/theme/white/custom.css
@@ -9,8 +9,9 @@
 	.language ul > li > a:hover { background-color: inherit !important; text-decoration: underline; cursor: pointer; }
 	.language ul > .active > a, .language ul > .active > a:hover { background-color: #00B2F3 !important; text-decoration: none; cursor: default; /* box-shadow: rgba(181, 184, 247, 0.34) 0 1px 0,#15191C 0 1px 0 inset,#15191D 0 -1px 0 inset; */ color: #fff; border-radius: 0px; }
 ul.level-3 { display: none; }
-.lang-nolang { display: block !important; font-family: 'Lato' sans-serif !important; font-size: 0.95em !important; color: #222; }
-	.lang-nolang .h1, .lang-nolang .h2, .lang-nolang .h3, .lang-nolang .h4 { display: block; color: #222; }
+.lang-nolang-rest { padding-top: 0px; margin-top: -4px; }
+.lang-nolang-rest, .lang-nolang { display: block !important; font-family: 'Lato' sans-serif !important; font-size: 0.95em !important; color: #222; min-height: 24px; }
+	.lang-nolang .h1, .lang-nolang .h2, .lang-nolang .h3, .lang-nolang .h4 { display: inline-block; color: #222; }
 	.lang-nolang .h1 { font-size: 1.5em; padding-bottom: 15px; }
 	.lang-nolang .h2 { font-size: 1.4em; padding-bottom: 12px; }
 	.lang-nolang .h3 { font-size: 1.3em; padding-bottom: 8px; }
