--- a/style/theme/white/style.css
+++ b/style/theme/white/style.css
@@ -104,9 +104,8 @@ a { color: #0093c8; text-decoration: none; }
 .content ul > li { list-style-type: disc; }
 .content ol > li { list-style-type: decimal; }
 .content ul,
-.content ol { margin-left: 20px; }
-	.content ul > li { list-style-type: none; position: relative; }
-		.content ul > li:before { content: ''; display: block; position: absolute; left: -17px; top: 7px; width: 5px; height: 5px; -webkit-border-radius: 4px; border-radius: 4px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; background: #fff; border: solid 1px #9090aa; }
+.content ol { margin-left: 4px; }
+	.content ul > li { list-style-type: circle; list-style-position: inside; position: relative; }
 .content li > :first-child { padding-top: 0; }
 .content strong,
 .content b { font-weight: bold; }
@@ -300,7 +299,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	.language ul li a { margin: 5px 2px 4px; padding: 2px 5px; }
 }
 
-.menubar { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; background-color: #dfdfdf; }
+.menubar { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; background-color: #dfdfdf; z-index: 10; }
 	.menubar .section { padding: 30px 0px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 		.menubar .section + .section { border-top: solid 1px #dfe2e7; }
 		.menubar .section.no-line { border-top: 0; padding-top: 0; }
