--- a/style/custom.css
+++ b/style/custom.css
@@ -1,21 +1,29 @@
 ﻿.footer { color: white; background-color: #0093C8; height: 63px; position: relative; }
 .copyright { position: absolute; right: 12px; font-size: 0.85em; bottom: 1px; }
-.logo { background: url(http://appacitive.github.io/guides%20template/styles/logo_small.png); display: block; width: 205px; height: 47px; }
-.content-root { margin-top: 4px; }
-.language { position: absolute; z-index: 100; background-color: #2E303D; background: linear-gradient(#585858, #242424); width: 100%; top: -3px; box-shadow: 1px 2px 3px #000; opacity: 0.95; }
+.logo { background: url(https://portal.appacitive.com/styles/images/logo.png); display: block; width: 206px; height: 45px; }
+.content-root { margin-top: 0px; }
+.language { position: absolute; z-index: 100; background-color: #DCDCDC; width: 100%; top: 0px; }
 	.language.fixed { position: fixed; overflow-y: auto; top: 0px; }
 	.language .nav { margin-bottom: 0px; }
-	.language ul li a { text-transform: uppercase; font-size: 0.85em; font-weight: 700; color: #55CEFA; }
+	.language ul li a { text-transform: uppercase; font-size: 0.85em; font-weight: 700; color: #222; }
 	.language ul > li > a:hover { background-color: inherit !important; text-decoration: underline; cursor: pointer; }
-	.language ul > .active > a, .language ul > .active > a:hover { background-color: #15191D !important; text-decoration: none; cursor: default; box-shadow: rgba(181, 184, 247, 0.34) 0 1px 0,#15191C 0 1px 0 inset,#15191D 0 -1px 0 inset; color: #fff; }
+	.language ul > .active > a, .language ul > .active > a:hover { background-color: #00B2F3 !important; text-decoration: none; cursor: default; /* box-shadow: rgba(181, 184, 247, 0.34) 0 1px 0,#15191C 0 1px 0 inset,#15191D 0 -1px 0 inset; */ color: #fff; border-radius: 0px; }
 ul.level-3 { display: none; }
-.lang-nolang { display: block !important; font-family: 'Lato' sans-serif !important; font-size: 0.95em !important; color: #ddd; }
-	.lang-nolang .h1, .lang-nolang .h2, .lang-nolang .h3, .lang-nolang .h4 { display: block; color: #fff; }
+.lang-nolang-rest { padding-top: 0px; margin-top: -4px; }
+.lang-nolang-rest, .lang-nolang { display: block !important; font-family: 'Lato' sans-serif !important; font-size: 0.95em !important; min-height: 24px; }
+	.lang-nolang .h1, .lang-nolang .h2, .lang-nolang .h3, .lang-nolang .h4 { display: inline-block; color: #222; }
 	.lang-nolang .h1 { font-size: 1.5em; padding-bottom: 15px; }
 	.lang-nolang .h2 { font-size: 1.4em; padding-bottom: 12px; }
 	.lang-nolang .h3 { font-size: 1.3em; padding-bottom: 8px; }
 	.lang-nolang .h4 { font-size: 1.1em; padding-bottom: 5px; }
-	.lang-nolang i { color: #ddd; }
+
+@media (max-width: 1180px) /* Small desktop */ {
+	.language { box-shadow: -1px 2px 6px rgba(38, 39, 43, 0.53); }
+}
+
+@media (min-width: 1180px) /* Big desktop */ {
+	.language { box-shadow: 2px 1px 4px rgba(38, 39, 43, 0.53); }
+}
 
 /*Logged In user*/
 .ex-right { position: absolute; right: 12px; top: 9px; }
@@ -23,12 +31,12 @@ ul.level-3 { display: none; }
 ul.top_links_user { padding: 0; width: auto; margin-top: 5px; margin-left: 0; }
 	ul.top_links_user li { position: relative; list-style: none; float: none; }
 		ul.top_links_user li a { font-size: 14px; text-transform: lowercase; display: inline-block; color: #FEFEFE; margin: 0 0 0 2px; letter-spacing: normal; padding: 0px; font-weight: normal; text-decoration: none; }
-			ul.top_links_user li a:hover { border-bottom: none; text-decoration: none; }
+			ul.top_links_user li a:hover { border-bottom: none; text-decoration: none; color: #FEFEFE; }
 			ul.top_links_user li a img { float: right; }
-.top_links_user span { color: gray; }
+.top_links_user span { }
 #imgUserPhoto { width: 40px; height: 40px; border: none; }
 #lstUserMenu { display: none; }
-.top_user_drop_menu { left: auto; right: -1px; min-width: 100px; position: absolute; z-index: 10000; color: #fff; background-color: #737373; }
+.top_user_drop_menu { left: auto; right: -1px; min-width: 100px; position: absolute; z-index: 10000; color: #fff; background-color: #737373; top: 47px; }
 	.top_user_drop_menu ul { margin: 0; padding: 0; }
 		.top_user_drop_menu ul li { }
 			.top_user_drop_menu ul li a { font-size: 14px; color: #fff; padding: 7px 20px; display: block; background: none; margin: 0; text-transform: lowercase; font-weight: 300; white-space: nowrap; cursor: pointer; font-weight: normal; }
@@ -46,3 +54,5 @@ ul.top_links_user { padding: 0; width: auto; margin-top: 5px; margin-left: 0; }
 	.app-list ul li a { padding: 7px 20px 7px 16px; }
 .nav-separator { padding: 0px; margin: 0px; border-top: solid 1px #B5B5B5; display: block; }
 .top_user_drop_menu.appList .nav-separator:first-child, .top_user_drop_menu.appList .nav-separator:last-child { border: solid 1px #737373; }
+
+.theme-toggle { height: 30px; background-color: red; display: block; }
