--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-﻿/* ----------------------------------------------------------------------------
+/* ----------------------------------------------------------------------------
  * Fonts
  */
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,700");
@@ -78,8 +78,6 @@ body, td, textarea, input { font-family: 'Lato', sans-serif; line-height: 1.7; f
 	input { font-size: 12px; }
 }
 
-a { color: #0093c8; text-decoration: none; }
-	a:hover { color: #0093c8; }
 /* ----------------------------------------------------------------------------
  * Content styling
  */
@@ -104,9 +102,8 @@ a { color: #0093c8; text-decoration: none; }
 .content ul > li { list-style-type: disc; }
 .content ol > li { list-style-type: decimal; }
 .content ul,
-.content ol { margin-left: 20px; }
-	.content ul > li { list-style-type: none; position: relative; }
-		.content ul > li:before { content: ''; display: block; position: absolute; left: -17px; top: 7px; width: 5px; height: 5px; -webkit-border-radius: 4px; border-radius: 4px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; background: #fff; border: solid 1px #9090aa; }
+.content ol { margin-left: 4px; }
+	.content ul > li { list-style-type: circle; list-style-position: inside; position: relative; }
 .content li > :first-child { padding-top: 0; }
 .content strong,
 .content b { font-weight: bold; }
@@ -121,7 +118,7 @@ a { color: #0093c8; text-decoration: none; }
  */
 .content-root { min-height: 90%; position: relative; }
 .content-wrapper { padding: 0px !important; }
-.content { padding-top: 30px; padding-bottom: 40px; padding-left: 40px; padding-right: 40px; zoom: 1; max-width: 700px; }
+.content { padding: 30px 40px 40px; zoom: 1; max-width: 700px; }
 	.content:before,
 	.content:after { content: ""; display: table; }
 	.content:after { clear: both; }
@@ -164,7 +161,7 @@ a { color: #0093c8; text-decoration: none; }
 .content h4,
 .content h5,
 .content .small-heading,
-body:not(.big-h3) .content h3 { border-bottom: solid 1px rgba(102, 102, 102, 0.25); color: #9E9E9E; padding-top: 30px; padding-bottom: 10px; }
+body:not(.big-h3) .content h3 { border-bottom: solid 1px rgba(102, 102, 102, 0.25); color: #888888; padding-top: 30px; padding-bottom: 10px; }
 body:not(.big-h3) .content h3 { font-size: 0.9em; }
 .content h1:first-child { padding-top: 0; }
 	.content h1:first-child,
@@ -190,7 +187,7 @@ body:not(.big-h3) .content h3 { font-size: 0.9em; }
 body.no-literate .content pre > code { background: #15191D; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; display: block; padding: 10px; -webkit-border-radius: 2px; border-radius: 2px; overflow: auto; }
 body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	body.no-literate .content pre > code::-webkit-scrollbar { width: 15px; height: 15px; }
-	body.no-literate .content pre > code::-webkit-scrollbar-thumb { background: #ddd; -webkit-border-radius: 8px; border-radius: 8px; border: solid 4px #15191D; }
+	body.no-literate .content pre > code::-webkit-scrollbar-thumb { background: #ddd; -webkit-border-radius: 8px; border-radius: 8px; border: solid 4px #f3f6fb; }
 	body.no-literate .content pre > code:hover::-webkit-scrollbar-thumb { background: #999; -webkit-box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); }
 
 @media (max-width: 1060px) {
@@ -200,11 +197,8 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 @media (max-width: 1180px) /* Small desktop */ {
 	.language ul li a { margin: 6px 3px 5px; padding: 3px 6px; }
 	.language .nav li:first-child a { margin-left: 20px; }
-	.content pre > code { background: #15191D; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; display: block; padding: 10px; -webkit-border-radius: 2px; border-radius: 2px; overflow: auto; }
 	.content pre > code { -webkit-overflow-scrolling: touch; }
-		.content pre > code::-webkit-scrollbar { width: 15px; height: 15px; }
-		.content pre > code::-webkit-scrollbar-thumb { background: #ddd; -webkit-border-radius: 8px; border-radius: 8px; border: solid 4px #15191D; }
-		.content pre > code:hover::-webkit-scrollbar-thumb { background: #999; -webkit-box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); }
+	
 }
 
 .button { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; letter-spacing: -1px; font-weight: bold; display: inline-block; padding: 3px 25px; border: solid 2px #2badad; -webkit-border-radius: 20px; border-radius: 20px; margin-right: 15px; }
@@ -218,8 +212,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 
 @media (min-width: 1180px) /* Big desktop */ {
 	.language .nav li:first-child a { margin-left: 20px; }
-	body:not(.no-literate) .content-root { background-color: #15191D; -webkit-box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); }
-	.language { left: 778px; }
+	.language { left: 780px; }
 }
 
 @media (min-width: 1180px) /* Big desktop */ {
@@ -266,7 +259,8 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		body:not(.no-literate) .content > .small-heading, body:not(.no-literate) .content > div > .small-heading,
 		body:not(.big-h3) body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
 }
-.header { background: #fff; text-shadow: 0 1px 0 rgba(255,255,255,0.5); box-shadow: 0 1px 5px #969696; padding: 4px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; height: 52px; }
+
+.header { background: #3a3a3a; border-bottom: solid 3px #00b0f0; box-shadow: 0 1px 5px #969696; padding: 6px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; height: 50px; }
 	.header:before,
 	.header:after { content: ""; display: table; }
 	.header:after { clear: both; }
@@ -278,9 +272,9 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		.header h1 a,
 		.header h1 a:visited { color: #9090aa; }
 			.header h1 a:hover { color: #505050; }
-	.header li a { font-size: 0.85em; font-weight: 700; color: #999; display: block; text-transform: uppercase; letter-spacing: 1px; }
-		.header li a:hover { color: gray; border-bottom: solid 1px #00b0f0; }
-	.header li.active a { color: gray; border-bottom: solid 1px #00b0f0; }
+	.header li a { color: #999; display: block; text-transform: lowercase; font-size: 13px; }
+		.header li a:hover { color: #eee; border-bottom: solid 1px #00b0f0; }
+	.header li.active a { color: #fff; border-bottom: solid 1px #00b0f0; }
 
 @media (min-width: 480px) /* Tablet & Desktop */ {
 	.header h1 { float: left; }
@@ -288,9 +282,8 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	.header li { display: block; float: left; }
 	.header ul { margin-left: -15px; }
 	.header h1 + ul { border-left: solid 1px #dfe2e7; margin-left: 15px; }
-	/*.header li { border-left: solid 1px rgba(255,255,255,0.5); border-right: solid 1px #dfe2e7; }*/
 	.header li:last-child { border-right: 0; }
-	.header li a { padding: 0 3px; margin: 0 20px; line-height: 16px; }
+	.header li a { padding: 0 3px; margin: 0 20px; line-height: 18px; height: 18px; }
 }
 
 @media (max-width: 480px) /* Mobile */ {
@@ -300,8 +293,8 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	.language ul li a { margin: 5px 2px 4px; padding: 2px 5px; }
 }
 
-.menubar { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; }
-	.menubar .section { padding: 30px 30px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.menubar { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; background-color: #dfdfdf; z-index: 10; }
+	.menubar .section { padding: 30px 0px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 		.menubar .section + .section { border-top: solid 1px #dfe2e7; }
 		.menubar .section.no-line { border-top: 0; padding-top: 0; }
 a.big.button { display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; width: 100%; padding: 10px 20px; text-align: center; font-weight: bold; font-size: 1.1em; background: transparent; border: solid 3px #2badad; -webkit-border-radius: 30px; border-radius: 30px; }
@@ -321,31 +314,31 @@ a.big.button { display: block; -webkit-box-sizing: border-box; -moz-box-sizing: 
 
 @media (min-width: 768px) /* Desktop */ {
 	.content-root { padding-left: 230px; }
-	.menubar { position: absolute; left: 0; top: 0; bottom: 0; width: 230px; border-right: solid 1px #dfe2e7; }
+	.menubar { position: absolute; left: 0; top: 0; bottom: 0; width: 230px; }
 		.menubar.fixed { position: fixed; overflow-y: auto; }
 		.menubar.fixed { -webkit-overflow-scrolling: touch; }
 			.menubar.fixed::-webkit-scrollbar { width: 15px; height: 15px; }
-			.menubar.fixed::-webkit-scrollbar-thumb { background: #ddd; -webkit-border-radius: 8px; border-radius: 8px; border: solid 4px #fff; }
+			.menubar.fixed::-webkit-scrollbar-thumb { background: #ddd; -webkit-border-radius: 8px; border-radius: 8px; border: solid 3px #f3f6fb; }
 			.menubar.fixed:hover::-webkit-scrollbar-thumb { background: #999; -webkit-box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); }
 }
 
-.menubar { font-size: 0.95em; }
+.menubar { font-size: 0.95em; overflow-x: hidden; }
 .menu ul.level-1 > li + li { margin-top: 20px; }
-.menu a { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; display: block; padding-top: 1px; padding-bottom: 1px; margin-right: -30px; }
+.menu a { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; display: block; border-left: solid 3px transparent; padding-top: 1px; padding-bottom: 1px; margin-right: -30px; }
 	.menu a,
-	.menu a:visited { }
-		.menu a:hover { text-decoration: underline; }
+	.menu a:visited { padding-left: 30px; padding-top: 4px; padding-bottom: 4px; color: #363636; }
+		.menu a:hover { }
 		.menu a.level-1 { text-transform: uppercase; font-size: 1.0em; font-weight: bold; }
 			.menu a.level-1,
-			.menu a.level-1:visited { color: #9090aa; }
+			.menu a.level-1:visited { color: #363636; }
 				.menu a.level-1:hover { color: #565666; }
 		.menu a.level-2 { font-weight: normal; font-size: 0.95em; }
-		.menu a.level-3 { font-weight: normal; font-size: 0.95em; padding-left: 10px; }
-		.menu a.active { font-weight: bold !important; }
+		.menu a.level-3 { font-weight: normal; font-size: 0.95em; padding-left: 40px; }
+		.menu a.active { }
 			.menu a.active,
 			.menu a.active:visited,
-			.menu a.active:hover { color: #505050 !important; }
-				.menu a.active:after { content: ''; display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: absolute; top: 10px; right: 30px; width: 9px; height: 3px; -webkit-border-radius: 2px; border-radius: 2px; background: #2badad; }
+			.menu a.active:hover { color: #2a2a2a !important; background-color: #fff; border-left: solid 3px #00B0F0; }
+				.menu a.active:after { content: ''; display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: absolute; top: 10px; right: 30px; width: 9px; height: 3px; -webkit-border-radius: 2px; border-radius: 2px; }
 code .string { color: #BBB156; }
 /*code .number*/
 code .init { color: #383; }
