--- a/style/style.css
+++ b/style/style.css
@@ -177,6 +177,8 @@ body:not(.big-h3) .content h3 { font-size: 0.9em; }
 }
 
 @media (max-width: 480px) /* Mobile */ {
+	.theme-switch { top: 6px; }
+	.theme { padding: 6px; }
 	.content { padding: 20px; padding-top: 40px; }
 		.content h4,
 		.content h5,
@@ -195,10 +197,11 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 }
 
 @media (max-width: 1180px) /* Small desktop */ {
+	.theme-switch { top: 6px; }
+	.theme { padding: 6px; }
 	.language ul li a { margin: 6px 3px 5px; padding: 3px 6px; }
 	.language .nav li:first-child a { margin-left: 20px; }
 	.content pre > code { -webkit-overflow-scrolling: touch; }
-	
 }
 
 .button { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; letter-spacing: -1px; font-weight: bold; display: inline-block; padding: 3px 25px; border: solid 2px #2badad; -webkit-border-radius: 20px; border-radius: 20px; margin-right: 15px; }
@@ -217,6 +220,8 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 
 @media (min-width: 1180px) /* Big desktop */ {
 	.language ul li a { margin: 9px 5px 8px; padding: 3px 8px; }
+	.theme-switch { top: 9px; }
+	.theme { padding: 7px; }
 	body:not(.no-literate) .content { padding-left: 0; padding-right: 0; width: 930px; max-width: none; }
 		body:not(.no-literate) .content > .content-wrapper,
 		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
