--- a/style/custom.css
+++ b/style/custom.css
@@ -27,7 +27,7 @@ pre[class*='-param-'] code { word-spacing: 0.1em; margin-bottom: -14px; text-sha
 	.lang-nolang .h4 { font-size: 1.1em; padding-bottom: 5px; }
 
 
-.theme-switch { position: absolute; left: 100%; }
+.theme-switch { position: absolute; }
 	.theme-switch a:first-child { margin-right: 10px; }
 .theme { display: inline-block; cursor: pointer; box-shadow: 1px 1px 1px #aaa; }
 .theme-black { background-color: #15191D; }
@@ -36,6 +36,7 @@ pre[class*='-param-'] code { word-spacing: 0.1em; margin-bottom: -14px; text-sha
 
 @media (max-width: 1180px) /* Small desktop */ {
 	.language { box-shadow: -1px 2px 6px rgba(38, 39, 43, 0.53); }
+	pre[class*='-param-'] code { border-bottom: none !important; margin-bottom: -28px;}
 }
 
 @media (min-width: 1180px) /* Big desktop */ {
