added table styling

--- a/style/style.css
+++ b/style/style.css
@@ -82,6 +82,7 @@ body, td, textarea, input { font-family: 'Lato', sans-serif; line-height: 1.7; f
  * Content styling
  */
 .content p,
+.content table,
 .content ul,
 .content ol,
 .content h1,
@@ -226,6 +227,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		body:not(.no-literate) .content > .content-wrapper,
 		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
 		body:not(.no-literate) .content > ul, body:not(.no-literate) .content > div > ul,
+		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table,
 		body:not(.no-literate) .content > ol, body:not(.no-literate) .content > div > ol,
 		body:not(.no-literate) .content > h1, body:not(.no-literate) .content > div > h1,
 		body:not(.no-literate) .content > h2, body:not(.no-literate) .content > div > h2,
@@ -255,6 +257,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 			body:not(.no-literate) .content > blockquote + h6, body:not(.no-literate) .content div > blockquote + h6 { clear: both; }
 		body:not(.no-literate) .content > p, body:not(.no-literate) .content > .content-wrapper,
 		body:not(.no-literate) .content > div > p,
+		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table,
 		body:not(.no-literate) .content > ul, body:not(.no-literate) .content > div > ul,
 		body:not(.no-literate) .content > ol, body:not(.no-literate) .content > div > ol,
 		body:not(.no-literate) .content > h4, body:not(.no-literate) .content > div > h4,
@@ -263,6 +266,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		body:not(.no-literate) .content > h5, body:not(.no-literate) .content > div > h5,
 		body:not(.no-literate) .content > .small-heading, body:not(.no-literate) .content > div > .small-heading,
 		body:not(.big-h3) body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
+        body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table { margin: 10px 40px !important;   padding: 0px !important;  width: 470px  !important; }
 }
 
 .header { background: #3a3a3a; border-bottom: solid 3px #00b0f0; box-shadow: 0 1px 5px #969696; padding: 6px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; height: 50px; }
