--- a/style/style.css
+++ b/style/style.css
@@ -65,7 +65,7 @@ td { margin: 0; padding: 0; border: 0; outline: 0; vertical-align: baseline; }
 body { line-height: 1; color: #000; background: #fff; }
 ol, ul { list-style: none; }
 table { border-collapse: separate; border-spacing: 0; vertical-align: middle; }
-caption, th, td { text-align: left; font-weight: normal; vertical-align: middle; }
+caption { text-align: left; font-weight: normal; vertical-align: middle; }
 a img { border: none; }
 html, body { height: 100%; }
 html { overflow-x: hidden; }
@@ -266,7 +266,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		body:not(.no-literate) .content > h5, body:not(.no-literate) .content > div > h5,
 		body:not(.no-literate) .content > .small-heading, body:not(.no-literate) .content > div > .small-heading,
 		body:not(.big-h3) body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
-		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table { margin: 10px 40px !important;   padding: 0px !important;  width: 470px  !important; }
+		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table { margin: 10px 40px !important; padding: 0px !important; width: 470px !important; }
 }
 
 .header { background: #3a3a3a; border-bottom: solid 3px #00b0f0; box-shadow: 0 1px 5px #969696; padding: 6px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; height: 50px; }
