--- a/style/style.css
+++ b/style/style.css
@@ -223,6 +223,9 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	.language ul li a { margin: 9px 5px 8px; padding: 3px 8px; }
 	.theme-switch { top: 9px; right: 12px; }
 	.theme { padding: 7px; }
+	body:not(.no-literate) .content > div > pre,
+	body:not(.no-literate) .content > div > pre { float: left; padding-left: 40px; width: 550px; padding-right: 40px; }
+
 	body:not(.no-literate) .content { padding-left: 0; padding-right: 0; max-width: none; }
 		body:not(.no-literate) .content > .content-wrapper,
 		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
@@ -235,13 +238,13 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		body:not(.no-literate) .content > h4, body:not(.no-literate) .content > div > h4,
 		body:not(.no-literate) .content > h5, body:not(.no-literate) .content > div > h5,
 		body:not(.no-literate) .content > h6, body:not(.no-literate) .content > div > h6,
-		body:not(.no-literate) .content > pre, body:not(.no-literate) .content > div > pre,
+		body:not(.no-literate) .content > pre,
 		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 550px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 40px; padding-left: 40px; }
 		body:not(.no-literate) .content > h1, body:not(.no-literate) .content > div > h1 { clear: both; width: 100%; padding-right: 0px; }
 		body:not(.no-literate) .content > h2, body:not(.no-literate) .content > div > h2,
 		body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3,
 		body:not(.no-literate) .content > h4, body:not(.no-literate) .content > div > h4 { clear: both; width: 96%; }
-		body:not(.no-literate) .content > pre, body:not(.no-literate) .content > div > pre,
+		body:not(.no-literate) .content > pre,
 		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 380px; padding: 10px 20px 4px; float: right; clear: right; -ms-word-wrap: break-word; word-wrap: break-word; }
 			body:not(.no-literate) .content > pre + p, body:not(.no-literate) .content div > pre + p,
 			body:not(.no-literate) .content > blockquote + p, body:not(.no-literate) .content > div > blockquote + p,
