--- a/style/theme/white/theme.css
+++ b/style/theme/white/theme.css
@@ -6,7 +6,9 @@
 	.lang-nolang i { color: #222; }
 
 @media (max-width: 1180px) /* Small desktop */ {
-	.content pre > code { background: #F5F5F5; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; }	
+	body:not(.no-literate) .content > div > pre > code,
+	body:not(.no-literate) .content > div > pre > code,
+	.content pre > code { background: #F5F5F5; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; }
 		.content pre > code::-webkit-scrollbar { width: 15px; height: 15px; }
 		.content pre > code::-webkit-scrollbar-thumb { background: #ddd; -webkit-border-radius: 8px; border-radius: 8px; border: solid 4px #f3f6fb; }
 		.content pre > code:hover::-webkit-scrollbar-thumb { background: #999; -webkit-box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); }
@@ -14,6 +16,8 @@
 
 @media (min-width: 1180px) /* Big desktop */ {
 	body:not(.no-literate) .content-root { background-color: #F5F5F5; -webkit-box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); }
+	body:not(.no-literate) .content > div > pre > code,
+	body:not(.no-literate) .content > div > pre > code { padding: 10px; background: #F5F5F5; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; }
 }
 
 
