made ui responsive to large screen resolution. Resolved #4

--- a/style/theme/black/theme.css
+++ b/style/theme/black/theme.css
@@ -18,7 +18,34 @@
 	body:not(.no-literate) .content > div > pre > code,
 	body:not(.no-literate) .content > div > pre > code { padding: 10px; background: #15191D; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; display: block; padding: 10px; -webkit-border-radius: 2px; border-radius: 2px; overflow: auto; }
 }
-
+@media (min-width: 1380px) /* Big desktop */ {
+    body:not(.no-literate) .content-root {
+        background-color: #15191D;
+        -webkit-box-shadow: inset 870px 0 #fff, inset 871px 0 #dfe2e7, inset 880px 0 5px -10px rgba(0,0,0,0.1);
+        box-shadow: inset 870px 0 #fff, inset 871px 0 #dfe2e7, inset 880px 0 5px -10px rgba(0,0,0,0.1);
+    }
+}
+@media (min-width: 1620px) /* Big desktop */ {
+    body:not(.no-literate) .content-root {
+        background-color: #15191D;
+        -webkit-box-shadow: inset 1010px 0 #fff, inset 1011px 0 #dfe2e7, inset 1020px 0 5px -10px rgba(0,0,0,0.1);
+        box-shadow: inset 1010px 0 #fff, inset 1011px 0 #dfe2e7, inset 1020px 0 5px -10px rgba(0,0,0,0.1);
+    }
+}
+@media (min-width: 1880px) /* Big desktop */ {
+    body:not(.no-literate) .content-root {
+        background-color: #15191D;
+        -webkit-box-shadow: inset 1130px 0 #fff, inset 1131px 0 #dfe2e7, inset 1140px 0 5px -10px rgba(0,0,0,0.1);
+        box-shadow: inset 1130px 0 #fff, inset 1131px 0 #dfe2e7, inset 1140px 0 5px -10px rgba(0,0,0,0.1);
+    }
+}
+@media (min-width: 2520px) /* Big desktop */ {
+    body:not(.no-literate) .content-root {
+        background-color: #15191D;
+        -webkit-box-shadow: inset 1560px 0 #fff, inset 1561px 0 #dfe2e7, inset 1570px 0 5px -10px rgba(0,0,0,0.1);
+        box-shadow: inset 1560px 0 #fff, inset 1561px 0 #dfe2e7, inset 1570px 0 5px -10px rgba(0,0,0,0.1);
+    }
+}
 
 /*
 Monokai style - ported by Luigi Maselli - http://grigio.org
