--- a/style/style.css
+++ b/style/style.css
@@ -65,7 +65,7 @@ caption { text-align: left; font-weight: normal; vertical-align: middle; }
 a img { border: none; }
 html, body { height: 100%; }
 html { overflow-x: hidden; }
-body, td, textarea, input { font-family: 'Lato', sans-serif; line-height: 1.7; font-size: 14px; color: #505050; }
+body, td, textarea, input { font-family: 'Open Sans', sans-serif; line-height: 1.7; font-size: 14px; color: #505050; }
 
 dl, dt, dd { font-weight: bold; float: left; padding-bottom: 20px; }
 dl { width: 100%; padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; border: solid 1px rgba(102,102,102,.1); border-right: none; border-left: none; }
@@ -279,8 +279,65 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		body:not(.no-literate) .content > h5, body:not(.no-literate) .content > div > h5,
 		body:not(.no-literate) .content > .small-heading, body:not(.no-literate) .content > div > .small-heading,
 		body:not(.big-h3) body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
-		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table { margin: 10px 40px !important; padding: 0px !important; width: 470px !important; }
-	.content > div > dl { padding: 30px 0px 5px 0; width: 470px; margin-left: 40px; margin-right: 40px; }
+		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table { margin: 10px 40px !important; padding: 0px !important; width: 85% !important; }
+	.content > div > dl { padding: 30px 0px 5px 0; width: 90%; margin-left: 40px; margin-right: 40px; }
+}
+
+@media (min-width: 1380px) {
+    body:not(.no-literate) .content > .content-wrapper,
+		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
+		body:not(.no-literate) .content > ul, body:not(.no-literate) .content > div > ul,
+		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table,
+		body:not(.no-literate) .content > ol, body:not(.no-literate) .content > div > ol,
+		body:not(.no-literate) .content > pre,
+		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 650px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 40px; padding-left: 40px; }
+    .menubar , .menu a.level-2, .menu a.level-3{ width: 220px !important; }
+    .content-root { padding-left: 220px !important; }
+    .language { left: 870px; }
+}
+@media (min-width: 1620px) {
+    body { font-size: 17px; }
+    body:not(.no-literate) .content > .content-wrapper,
+		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
+		body:not(.no-literate) .content > ul, body:not(.no-literate) .content > div > ul,
+		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table,
+		body:not(.no-literate) .content > ol, body:not(.no-literate) .content > div > ol,
+		body:not(.no-literate) .content > pre,
+		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 750px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 40px; padding-left: 40px; }
+     .menubar , .menu a.level-2, .menu a.level-3{ width: 260px !important; }
+     .content-root { padding-left: 260px !important; }
+     .theme-switch { top: 2px; }
+     .language { left: 1010px; }
+}
+@media (min-width: 1880px) {
+    body { font-size: 19px; }
+    body:not(.no-literate) .content > .content-wrapper,
+		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
+		body:not(.no-literate) .content > ul, body:not(.no-literate) .content > div > ul,
+		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table,
+		body:not(.no-literate) .content > ol, body:not(.no-literate) .content > div > ol,
+		body:not(.no-literate) .content > pre,
+		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 850px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 40px; padding-left: 40px; }
+    .menubar , .menu a.level-2, .menu a.level-3{ width: 280px !important; }
+    .content-root { padding-left: 280px !important; }
+    .language { left: 1130px; }
+    .theme-switch { top: 2px; }
+}
+@media (min-width: 2520px) {
+    body { font-size: 25px; }
+    body:not(.no-literate) .content > .content-wrapper,
+		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
+		body:not(.no-literate) .content > ul, body:not(.no-literate) .content > div > ul,
+		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table,
+		body:not(.no-literate) .content > ol, body:not(.no-literate) .content > div > ol,
+		body:not(.no-literate) .content > pre,
+		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 1200px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 40px; padding-left: 40px; }
+    .menubar , .menu a.level-2, .menu a.level-3{ width: 360px !important; }
+    .content-root { padding-left: 360px !important; }
+    .language { left: 1560px; height: 58px; }
+    .language ul li a { line-height: 33px !important; }
+    .theme-switch { top: 4px; }
+    table td { padding-top: 12px !important; padding-bottom: 12px !important; }
 }
 
 .header { background: #3a3a3a; border-bottom: solid 3px #00b0f0; box-shadow: 0 1px 5px #969696; padding: 6px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; height: 50px; }
