--- a/style/bundle.css
+++ b/style/bundle.css
@@ -438,7 +438,7 @@ code .comment { color: gray; }
     .title-area > div { position: relative; z-index: 1; }
 
 .menubar .level-4 { display: none; }
-h1, h2, h3, h4, h5 { font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-serif !important; font-weight: normal !important;}
+h1, h2, h3, h4, h5 { font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-serif !important; }
 
 .footer { color: white; background-color: #0093C8; height: 63px; position: relative; }
 .copyright { position: absolute; right: 12px; font-size: 0.85em; bottom: 1px; }
